--- a/.github/workflows/generate_image.yml
+++ b/.github/workflows/generate_image.yml
@@ -2,8 +2,8 @@ name: Generate Dashboard Image
 
 on:
   workflow_dispatch: # Allows manual triggering of the action
-  schedule:
-    - cron: '*/15 * * * *' # Runs every 15 minutes
+  #schedule:
+  #  - cron: '*/15 * * * *' # Runs every 15 minutes
 
 jobs:
   generate-image:
